--- a/Clarinet.toml
+++ b/Clarinet.toml
@@ -1,21 +1,29 @@
 [project]
-name = "Peer-to-Peer-Lending-Platform"
-description = ""
+name = 'Peer-to-Peer-Lending-Platform'
+description = ''
 authors = []
 telemetry = true
-cache_dir = "./.cache"
+cache_dir = './.cache'
+requirements = []
+[contracts.lender-matching]
+path = 'contracts/lender-matching.clar'
+clarity_version = 2
+epoch = 2.5
 
-# [contracts.counter]
-# path = "contracts/counter.clar"
+[contracts.loan-request]
+path = 'contracts/loan-request.clar'
+clarity_version = 2
+epoch = 2.5
 
+[contracts.repayment-management]
+path = 'contracts/repayment-management.clar'
+clarity_version = 2
+epoch = 2.5
 [repl.analysis]
-passes = ["check_checker"]
-check_checker = { trusted_sender = false, trusted_caller = false, callee_filter = false }
+passes = ['check_checker']
 
-# Check-checker settings:
-# trusted_sender: if true, inputs are trusted after tx_sender has been checked.
-# trusted_caller: if true, inputs are trusted after contract-caller has been checked.
-# callee_filter: if true, untrusted data may be passed into a private function without a
-# warning, if it gets checked inside. This check will also propagate up to the
-# caller.
-# More informations: https://www.hiro.so/blog/new-safety-checks-in-clarinet
+[repl.analysis.check_checker]
+strict = false
+trusted_sender = false
+trusted_caller = false
+callee_filter = false
